--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="my2.jpg">
+                        <img src="myAbout.jpg">
                     </div>
                     <div class="about-col-2">
                         <h1 class="nano">About Me</h1>
