--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <br>
                 <span id="element"></span>
                 <br>
-                <a href="My Portfolio.pdf" download class="btn btn2">Download CV</a>
+                <a href="Resume 1st Pdf.pdf" download class="btn btn2">Download CV</a>
             </div>
         </div>
     </div>
