--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <br>
 
                         <ul>
-                            <li><span>UI/UX</span><br>beginner to Design web sites </li>
+                            <li><span>UI/UX</span><br>Intermediate WebSite Designer </li>
                             <li><span>Web Development </span><br>WebSites Development</li>
                             <li><span> Aspiring AI Engineer</span><br> learning concept like , <br> GEN AI , AI
                                 Fundamentals , AI tools</li>
