--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Let's Connect </h1>
                     <p><i class="fa-regular fa-envelope"></i>ismailpromt2i@gmail.com</p>
-                    <p><i class="fa-solid fa-phone"></i>77xxxxxxx0</p>
+                    <p><i class="fa-solid fa-phone"></i>7719877580</p>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/ismail-shaikh-19798a335/" target="_blank"><i
                                 class="fa-brands fa-linkedin"></i></a>
