--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                             <br>
                             <br>
                             Expanding my technical understanding of AI principles and technologies such as <span class="class">GPT,GEMENI
-                                CO-Pilot</span>  picture generation, and video editing.
+                                CO-Pilot</span>  content generation.
                             <br>
                             <br>
-                            Thus, as an intermediate<span class="class"> Front-end developer</span> I study [Fundamentals of GEN AI & AI tools]
+                            Thus, as an intermediate<span class="class"> Front-end developer</span> I study [Fundamentals of Designing & User Interface]
                     </div>
 
 
