--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="https://www.linkedin.com/in/ismail-shaikh-19798a335/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/Ismail-dcode" target="_blank">
+                    <a href="https://github.com/Ismail-dcode/myProject" target="_blank">
                         <i class="fa-brands fa-github"></i>
                     </a>
                 
@@ -203,14 +203,14 @@
                 </div>
             </div>
 
-            <!-- Second Project Card -->
+       
             <div class="project-card">
                 <div class="project-img">
                     <img src="Project-2.png" alt="Project 2">
                 </div>
                 <div class="project-content">
                     <h3>Weather App</h3>
-                    <p>Real-time weather application using Weather API. Features include location detection</p>
+                    <p>Real-time weather application using Weather API.</p>
                     <div class="project-tags">
                         <span>JavaScript</span>
                         <span>API</span>
@@ -237,7 +237,7 @@
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/ismail-shaikh-19798a335/" target="_blank"><i
                                 class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/Ismail-dcode" target="_blank"><i
+                        <a href="https://github.com/Ismail-dcode/myProject" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
