--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </div>
                 <div class="project-content">
                     <h3>Weather App</h3>
-                    <p>Real-time weather application using Weather API.</p>
+                    <p>A responsive weather application built using HTML, CSS, and JavaScript, powered by a weather API to fetch real-time weather data.</p>
                     <div class="project-tags">
                         <span>JavaScript</span>
                         <span>API</span>
