--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
        
             <div class="project-card">
                 <div class="project-img">
-                    <img src="Project-2.png" alt="Project 2">
+                    <img src="Project-II.png" alt="Project 2">
                 </div>
                 <div class="project-content">
                     <h3>Weather App</h3>
