--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <img src="Project-II.png" alt="Project 2">
                 </div>
                 <div class="project-content">
-                    <h3>Weather App</h3>
+                    <h3>WeatherNow </h3>
                     <p>A responsive weather application built using HTML, CSS, and JavaScript, powered by a weather API to fetch real-time weather data.</p>
                     <div class="project-tags">
                         <span>JavaScript</span>
