--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         
                     </div>
                     <div class="project-links">
-                        <a href=" https://ismail-dcode.github.io/WeatherApp/" class="demo-btn" target="_blank">Live Demo</a>
+                        <a href=" https://ismail-dcode.github.io/WeatherNow/" class="demo-btn" target="_blank">Live Demo</a>
                         <a href="https://github.com/Ismail-dcode/WeatherNow" class="github-btn" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
