--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
                             Proficient in <span class="class">JavaScript, C++/C, and Python</span>, & working with there projects.
                             <br>
                             <br>
-                            Expanding my technical understanding of AI principles and technologies such as <span class="class">GPT,GEMENI
-                                CO-Pilot</span>  picture generation, and video editing. I study [Fundamentals of GEN AI & AI tools] .
+                              Currently exploring AI technologies, including <span class="class">Google Gemini and GPT </span>  to enhance app functionality.
+                            Eager to apply my skills in a dynamic environment, contribute to innovative projects, and grow as a developer. 
+                            Looking for opportunities to gain hands-on experience and build scalable applications. 
                             <br>
                             <br>
                     </div>
@@ -266,7 +267,8 @@
             typeSpeed: 50,
         })
     </script>
-    <script src="newport.js"></script>
+    <script src="newport.js"></script>
+
 
 </body>
 
