--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                         
                     </div>
                     <div class="project-links">
-                        <a href=" https://ismail-dcode.github.io/WeatherNow/" class="demo-btn" target="_blank">Live Demo</a>
-                        <a href="https://github.com/Ismail-dcode/WeatherNow" class="github-btn" target="_blank">
+                        <a href=" https://ismail-dcode.github.io/Weather-Now_API-Project/" class="demo-btn" target="_blank">Live Demo</a>
+                        <a href="https://ismail-dcode.github.io/Weather-Now_API-Project/" class="github-btn" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                     </div>
