--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </div>
                     <div class="project-links">
                         <a href=" https://ismail-dcode.github.io/Weather-Now_API-Project/" class="demo-btn" target="_blank">Live Demo</a>
-                        <a href="https://ismail-dcode.github.io/Weather-Now_API-Project/" class="github-btn" target="_blank">
+                        <a href="https://github.com/Ismail-dcode/Weather-Now_API-Project/" class="github-btn" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                     </div>
