--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span id="element"></span>
 
             <br>
-            <a href="My-Resume-Nov.pdf" download class="btn btn2">Download CV</a>
+            <a href="My-Resume-new.pdf" download class="btn btn2">Download CV</a>
         </div>
     </div>
     <!------------------------------------------------------------------------------------------------------------------------>
