--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
                     </div>
                     <div class="project-links">
-                        <a href=" https://ismail-dcode.github.io/Text-Talker_(TTP)-AI" class="demo-btn" target="_blank">Live
+                        <a href="https://ismail-dcode.github.io/Text-Talker_TTP-AI/" class="demo-btn" target="_blank">Live
                             Demo</a>
                         <a href="https://github.com/Ismail-dcode/Text-Talker_TTP-AI" class="github-btn" target="_blank">
                             <i class="fab fa-github"></i> GitHub
