--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="https://www.linkedin.com/in/ismail-shaikh-19798a335/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/Ismail-dcode/myProject" target="_blank">
+                    <a href="https://github.com/Ismail-dcode" target="_blank">
                         <i class="fa-brands fa-github"></i>
                     </a>
 
@@ -295,7 +295,7 @@
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/ismail-shaikh-19798a335/" target="_blank"><i
                                 class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/Ismail-dcode/myProject" target="_blank"><i
+                        <a href="https://github.com/Ismail-dcode" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
