--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
                             experience in React Native, Node.js, and Express.js.
                             <br>
                             <br>
-                            Currently exploring AI technologies, including <span class="class">Google Gemini and GPT </span>  to enhance app functionality.
-                            Eager to apply my skills in a dynamic environment, contribute to innovative projects, and grow as a developer. 
-                            Looking for opportunities to gain hands-on experience and build scalable applications. 
+                            Currently exploring AI technologies, including <span class="class">Google Gemini and GPT
+                            </span> to enhance app functionality.
+                            Eager to apply my skills in a dynamic environment, contribute to innovative projects, and
+                            grow as a developer.
+                            Looking for opportunities to gain hands-on experience and build scalable applications.
                             <br>
                             <br>
                     </div>
@@ -188,7 +190,7 @@
     <section id="projects">
         <h1 class="Section-title">My <span>Projects</span></h1>
         <div class="projects-container">
-            
+
             <div class="project-card">
                 <div class="project-img">
                     <img src="Project-1.png" alt="Project 1">
@@ -227,61 +229,16 @@
 
                     </div>
                     <div class="project-links">
-                        <a href=" https://ismail-dcode.github.io/PIXEL-GenAi_AI-Model-learnings/" class="demo-btn" target="_blank">Live
+                        <a href=" https://ismail-dcode.github.io/PIXEL-GenAi_AI-Model-learnings/" class="demo-btn"
+                            target="_blank">Live
                             Demo</a>
-                        <a href="https://github.com/Ismail-dcode/PIXEL-GenAi_AI-Model-learnings" class="github-btn" target="_blank">
+                        <a href="https://github.com/Ismail-dcode/PIXEL-GenAi_AI-Model-learnings" class="github-btn"
+                            target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                     </div>
                 </div>
             </div>
-
-
-            <div class="project-card">
-                <div class="project-img">
-                    <img src="TextTalker.png" alt="Project 2">
-                </div>
-                <div class="project-content">
-                    <h3>TextTalker</h3>
-                    <p>TextTalker is a simple text-to-speech (TTS) web application.</p>
-                    <div class="project-tags">
-                        <span>JavaScript</span>
-                        <span>SpeechSynthesis API Fetching</span>
-
-                    </div>
-                    <div class="project-links">
-                        <a href="https://ismail-dcode.github.io/Text-Talker_TTP-AI/" class="demo-btn" target="_blank">Live
-                            Demo</a>
-                        <a href="https://github.com/Ismail-dcode/Text-Talker_TTP-AI" class="github-btn" target="_blank">
-                            <i class="fab fa-github"></i> GitHub
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="project-card">
-                <div class="project-img">
-                    <img src="Project-II.png" alt="Project 2">
-                </div>
-                <div class="project-content">
-                    <h3>Weather App</h3>
-                    <p>Real-time weather application using Weather API.</p>
-                    <div class="project-tags">
-                        <span>JavaScript</span>
-                        <span>Real-time data Fetching</span>
-
-                    </div>
-                    <div class="project-links">
-                        <a href=" https://ismail-dcode.github.io/Weather-Now_API-Project" class="demo-btn" target="_blank">Live
-                            Demo</a>
-                        <a href="https://github.com/Ismail-dcode/Weather-Now_API-Project" class="github-btn" target="_blank">
-                            <i class="fab fa-github"></i> GitHub
-                        </a>
-                    </div>
-                </div>
-            </div>
-           
         </div>
     </section>
 
@@ -327,7 +284,7 @@
     <script src="newport.js"></script>
 
 
-<!-- hi i am new contributor -->
+    <!-- hi i am new contributor -->
 </body>
 
 </html>
