--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav>
                 <div id="menu-btn" onclick="toggleMenu()">
-                    
+
                     <i class="fas fa-bars"></i>
                 </div>
                 <br>
@@ -27,7 +27,9 @@
                     </a>
                     <a href="https://github.com/Ismail-dcode" target="_blank">
                         <i class="fa-brands fa-github"></i>
-                    </a>
+                        <a href="https://hub.docker.com/u/ismaildcode" target="_blank">
+                            <i class="fa-brands fa-docker"></i>
+                        </a>
 
                 </div>
                 <ul id="sidemenu">
@@ -74,20 +76,21 @@
                             Sambhaji Nagar.
                             <br>
                             <br>
-                            know about <span class="class">Android and Web Development</span> with Frameworks like React
+                            know about <span class="class">Development & automation </span>  Frameworks like React
                             Native, Node.js and JavaScript.
-                            Passionate about exploring new technologies and development tools, staying updated with
+                            Passionate about exploring new Development and Automation tools like<span class="class">Docker , Github Action </span> & staying updated with
                             industry trends.
                             <br>
                             <br>
-                            Proficient in <span class="class">JavaScript, C++/C</span> with hands-on
+                            Intermedient in <span class="class">JavaScript, C++/C</span> with hands-on
                             experience in React Native, Node.js, and Express.js.
                             <br>
                             <br>
-                            Currently exploring AI technologies, including <span class="class">Google AI Studio and GPT
-                            </span> to enhance app functionality.
-                            Eager to apply my skills in a dynamic environment, contribute to innovative projects, and
-                            grow as a developer.
+                            Currently exploring AI technologies like <span class="class">Google AI Studio and GPT</span>
+                            to enhance app functionality, along with DevOps tools such as <span class="class">Docker,
+                                GitHub Actions</span>, and automation workflows to streamline development and
+                            deployment. Eager to contribute to scalable and reliable systems, while continuously growing
+                            as a full-stack and DevOps engineer.
                             Looking for opportunities to gain hands-on experience and build scalable applications.
                             <br>
                             <br>
@@ -114,34 +117,35 @@
                         <div class="skill-category">
                             <h3>Development</h3>
                             <div class="skills-grid">
-                                <span class="skill-tag">Front-end Development</span>
-                                <span class="skill-tag">Backend Development</span>
-                                <span class="skill-tag">Responsive Design</span>
-                                <span class="skill-tag">App & Web </span>
+                                <span class="skill-tag"><i class="fas fa-code"></i> Front-end Development</span>
+                                <span class="skill-tag"><i class="fas fa-server"></i> Backend Development</span>
+                                <span class="skill-tag"><i class="fas fa-cogs"></i> Automation </span>
+                                <span class="skill-tag"><i class="fab fa-docker"></i> Containerization</span>
+                                <span class="skill-tag"><i class="fas fa-mobile-alt"></i> Responsive Design</span>
+                                <span class="skill-tag"><i class="fas fa-globe"></i> App & Web </span>
                             </div>
                         </div>
                         <div class="skill-category">
                             <h3> Languages & Frameworks</h3>
                             <div class="skills-grid">
-                                <span class="skill-tag">JavaScript</span>
-                                <span class="skill-tag">C++/C</span>
-                                <span class="skill-tag">HTML | CSS</span>
-                                <span class="skill-tag">Node.js</span>
-                                <span class="skill-tag">Express.js</span>
-                                <span class="skill-tag">React Native</span>
+                                <span class="skill-tag"><i class="fab fa-js"></i> JavaScript</span>
+                                <span class="skill-tag"><i class="fas fa-code"></i> C++/C</span>
+                                <span class="skill-tag"><i class="fab fa-html5"></i> HTML | <i class="fab fa-css3-alt"></i> CSS</span>
+                                <span class="skill-tag"><i class="fab fa-node-js"></i> Node.js</span>
+                                <span class="skill-tag"><i class="fas fa-server"></i> Express.js</span>
+                                <span class="skill-tag"><i class="fab fa-react"></i> React Native</span>
                             </div>
                         </div>
 
                         <div class="skill-category">
                             <h3> Technologies & Tools</h3>
                             <div class="skills-grid">
-
-                                <span class="skill-tag">GPT | Copilot | GEMINI</span>
-                                <span class="skill-tag">GitHub Pages </span>
-                                <span class="skill-tag">Git | Github</span>
-                                <span class="skill-tag">VS Code </span>
-                                <span class="skill-tag">Android Studio </span>
-                                <span class="skill-tag">Vercel</span>
+                                <span class="skill-tag"><i class="fas fa-robot"></i> GPT | Copilot | GEMINI</span>
+                                <span class="skill-tag"><i class="fab fa-git-alt"></i> Git | <i class="fab fa-github"></i> Github</span>
+                                <span class="skill-tag"><i class="fas fa-code"></i> VS Code </span>
+                                <span class="skill-tag"><i class="fab fa-android"></i> Android Studio </span>
+                                <span class="skill-tag"><i class="fas fa-cloud"></i> Vercel</span>
+                                <span class="skill-tag"><i class="fab fa-docker"></i> Docker </span>
                             </div>
                         </div>
                     </div>
@@ -199,9 +203,9 @@
                     <h3>Portfolio Website</h3>
                     <p>A modern portfolio website built with HTML, CSS, and JavaScript featuring smooth animations and
                         responsive design.
-                    <br><br>
-                        Welcome to my portfolio! showcasing my projects in web and mobile development. 
-                        Explore my work in app development inProgress, UI design, built using 
+                        <br><br>
+                        Welcome to my portfolio! showcasing my projects in web and mobile development.
+                        Explore my work in app development inProgress, UI design, built using
                         technologies like React Native, Node.js."
                     </p>
                     <div class="project-tags">
@@ -253,9 +257,12 @@
                 </div>
                 <div class="project-content">
                     <h3>CodeByte [ AI-Hackathon Final Prototype ]</h3>
-                    <p>Our team <span class="class">DevStrom</span> participated in the Technophilia 2025 AI Hackathon at MIT College, Aurangabad, and developed a powerful AI software that transforms UI images or sketches
-                         into frontend boilerplate code (HTML/CSS). This tool empowers developers and designers by automating the process of 
-                         converting wireframes or UI mockups into clean, production-ready code.</p>
+                    <p>Our team <span class="class">DevStrom</span> participated in the Technophilia 2025 AI Hackathon
+                        at MIT College, Aurangabad, and developed a powerful AI software that transforms UI images or
+                        sketches
+                        into frontend boilerplate code (HTML/CSS). This tool empowers developers and designers by
+                        automating the process of
+                        converting wireframes or UI mockups into clean, production-ready code.</p>
                     <div class="project-tags">
                         <span>JavaScript</span>
                         <span>Node JS APP</span>
@@ -303,7 +310,8 @@
         </div>
     </div>
     <div class="copyright">
-        <p class="copyright">© 2024  designed & Developed by <span class="class">Shaikh Ismail</span> . All rights reserved.</p>
+        <p class="copyright">© 2024 designed & Developed by <span class="class">Shaikh Ismail</span> . All rights
+            reserved.</p>
     </div>
 
 
@@ -311,7 +319,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-            strings: ['Aspiring AI engineer', ' Developer [App || Web] '],
+            strings: ['Aspiring DevOps Engineer', ' Development || Automation '],
             typeSpeed: 50,
         })
     </script>
