new profile updated
change added

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
                     </a>
                     <a href="https://github.com/Ismail-dcode" target="_blank">
                         <i class="fa-brands fa-github"></i>
-                        <a href="https://hub.docker.com/u/ismaildcode" target="_blank">
-                            <i class="fa-brands fa-docker"></i>
-                        </a>
-
+                    </a>
+                    <a href="https://hub.docker.com/u/ismaildcode" target="_blank">
+                        <i class="fa-brands fa-docker"></i>
+                    </a>
+                    <a href="https://x.com/Ismail_dcode/" target="_blank">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </a>
                 </div>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
@@ -56,7 +59,7 @@
             <span id="element"></span>
 
             <br>
-            <a href="My-Resume-new.pdf" download class="btn btn2">Resume</a>
+            <a href="Ismail-new-Resume 2.pdf" download class="btn btn2">Resume</a>
         </div>
     </div>
     <!------------------------------------------------------------------------------------------------------------------------>
@@ -82,15 +85,6 @@
                             industry trends.
                             <br>
                             <br>
-                            Intermedient in <span class="class">JavaScript, C++/C</span> with hands-on
-                            experience in React Native, Node.js, and Express.js.
-                            <br>
-                            <br>
-                            Currently exploring AI technologies like <span class="class">Google AI Studio and GPT</span>
-                            to enhance app functionality, along with DevOps tools such as <span class="class">Docker,
-                                GitHub Actions</span>, and automation workflows to streamline development and
-                            deployment. Eager to contribute to scalable and reliable systems, while continuously growing
-                            as a full-stack and DevOps engineer.
                             Looking for opportunities to gain hands-on experience and build scalable applications.
                             <br>
                             <br>
@@ -118,31 +112,26 @@
                             <h3>Development</h3>
                             <div class="skills-grid">
                                 <span class="skill-tag"><i class="fas fa-code"></i> Front-end Development</span>
-                                <span class="skill-tag"><i class="fas fa-server"></i> Backend Development</span>
                                 <span class="skill-tag"><i class="fas fa-cogs"></i> Automation </span>
                                 <span class="skill-tag"><i class="fab fa-docker"></i> Containerization</span>
-                                <span class="skill-tag"><i class="fas fa-mobile-alt"></i> Responsive Design</span>
-                                <span class="skill-tag"><i class="fas fa-globe"></i> App & Web </span>
                             </div>
                         </div>
                         <div class="skill-category">
-                            <h3> Languages & Frameworks</h3>
+                            <h3>Languages & Frameworks</h3>
                             <div class="skills-grid">
                                 <span class="skill-tag"><i class="fab fa-js"></i> JavaScript</span>
                                 <span class="skill-tag"><i class="fas fa-code"></i> C++/C</span>
-                                <span class="skill-tag"><i class="fab fa-html5"></i> HTML | <i class="fab fa-css3-alt"></i> CSS</span>
+                                <span class="skill-tag"><i class="fab fa-html5"></i> HTML |  <i class="fab fa-css3-alt"></i> CSS</span>
                                 <span class="skill-tag"><i class="fab fa-node-js"></i> Node.js</span>
-                                <span class="skill-tag"><i class="fas fa-server"></i> Express.js</span>
-                                <span class="skill-tag"><i class="fab fa-react"></i> React Native</span>
+                                <span class="skill-tag"><i class="fas fa-terminal"></i> Bash</span>
+                                <span class="skill-tag"><i class="fab fa-python"></i> Python</span>
                             </div>
                         </div>
-
                         <div class="skill-category">
-                            <h3> Technologies & Tools</h3>
+                            <h3>Technologies & Tools</h3>
                             <div class="skills-grid">
-                                <span class="skill-tag"><i class="fas fa-robot"></i> GPT | Copilot | GEMINI</span>
+                                <span class="skill-tag"><i class="fab fa-linux"></i> Linux</span>
                                 <span class="skill-tag"><i class="fab fa-git-alt"></i> Git | <i class="fab fa-github"></i> Github</span>
-                                <span class="skill-tag"><i class="fas fa-code"></i> VS Code </span>
                                 <span class="skill-tag"><i class="fab fa-android"></i> Android Studio </span>
                                 <span class="skill-tag"><i class="fas fa-cloud"></i> Vercel</span>
                                 <span class="skill-tag"><i class="fab fa-docker"></i> Docker </span>
@@ -192,7 +181,7 @@
     </div>
 
     <section id="projects">
-        <h1 class="Section-title">My <span>Projects</span></h1>
+        <h1 class="Section-title">My <span>Works</span></h1>
         <div class="projects-container">
 
             <div class="project-card">
@@ -224,7 +213,7 @@
 
             <div class="project-card">
                 <div class="project-img">
-                    <img src="AI-Image-gen.png" alt="Project 2">
+                    <img src="project-3.png" alt="Project 2">
                 </div>
                 <div class="project-content">
                     <h3>PIXEL-GenAi</h3>
@@ -295,6 +284,9 @@
                                 class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/Ismail-dcode" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
+                                <a href="https://x.com/Ismail_dcode/" target="_blank">
+                                    <i class="fa-brands fa-x-twitter"></i>
+                                </a>
                     </div>
                 </div>
                 <div class="contact-right">
