--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <span id="element"></span>
 
             <br>
-            <a href="Ismail-new-Resume 2.pdf" download class="btn btn2">Resume</a>
+            <a href="Resume-new1.pdf" download class="btn btn2">Resume</a>
         </div>
     </div>
     <!------------------------------------------------------------------------------------------------------------------------>
