--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-            strings: ['Aspiring DevOps Engineer', ' Development || Automation '],
+            strings: ['Development || Automation ', ' Aspiring Cloud DevOps Engineer '],
             typeSpeed: 50,
         })
     </script>
