--- a/index.html
+++ b/index.html
@@ -201,9 +201,11 @@
                         <span>HTML</span>
                         <span>CSS</span>
                         <span>JavaScript</span>
+                        <span>Node Server</span>
+                        <span>Vercel Deployment</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/Ismail-dcode/Myportfolio" class="github-btn" target="_blank">
+                        <a href="https://github.com/Ismail-dcode/Personal-Portfolio" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                     </div>
