--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <span>Vercel Deployment</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/Ismail-dcode/Personal-Portfolio" target="_blank">
+                        <a href="https://github.com/Ismail-dcode/Personal-Portfolio" class="github-btn" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                     </div>
