--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
 
                     </div>
                     <div class="project-links">
-                        <a href=" https://ismail-dcode.github.io/PIXEL-GenAi_AI-Model-learnings/" class="demo-btn"
+                        <!-- <a href=" https://ismail-dcode.github.io/PIXEL-GenAi_AI-Model-learnings/" class="demo-btn"
                             target="_blank">Live
-                            Demo</a>
+                            Demo</a> -->
                         <a href="https://github.com/Ismail-dcode/PIXEL-GenAi_AI-Model-learnings" class="github-btn"
                             target="_blank">
                             <i class="fab fa-github"></i> GitHub
