--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <span id="element"></span>
 
             <br>
-            <a href="Resume-new1.pdf" download class="btn btn2">Resume</a>
+            <a href="assets/IsmailShaikh_InternshalaResume-3.pdf" download class="btn btn2">Resume</a>
         </div>
     </div>
     <!------------------------------------------------------------------------------------------------------------------------>
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="myAbout.jpg">
+                    <img src="assets/myAbout.jpg">
                 </div>
                 <div class="about-col-2">
                     <div class="sec1">
@@ -186,7 +186,7 @@
 
             <div class="project-card">
                 <div class="project-img">
-                    <img src="Project-1.png" alt="Project 1">
+                    <img src="assets/Project-1.png" alt="Project 1">
                 </div>
                 <div class="project-content">
                     <h3>Portfolio Website</h3>
@@ -201,9 +201,11 @@
                         <span>HTML</span>
                         <span>CSS</span>
                         <span>JavaScript</span>
+                        <span>Node Server</span>
+                        <span>Vercel Deployment</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/Ismail-dcode/Myportfolio" class="github-btn" target="_blank">
+                        <a href="https://github.com/Ismail-dcode/Personal-Portfolio" class="github-btn" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                     </div>
@@ -213,7 +215,7 @@
 
             <div class="project-card">
                 <div class="project-img">
-                    <img src="project-3.png" alt="Project 2">
+                    <img src="assets/project-3.png" alt="Project 2">
                 </div>
                 <div class="project-content">
                     <h3>PIXEL-GenAi</h3>
@@ -228,9 +230,9 @@
 
                     </div>
                     <div class="project-links">
-                        <a href=" https://ismail-dcode.github.io/PIXEL-GenAi_AI-Model-learnings/" class="demo-btn"
+                        <!-- <a href=" https://ismail-dcode.github.io/PIXEL-GenAi_AI-Model-learnings/" class="demo-btn"
                             target="_blank">Live
-                            Demo</a>
+                            Demo</a> -->
                         <a href="https://github.com/Ismail-dcode/PIXEL-GenAi_AI-Model-learnings" class="github-btn"
                             target="_blank">
                             <i class="fab fa-github"></i> GitHub
@@ -242,7 +244,7 @@
 
             <div class="project-card">
                 <div class="project-img">
-                    <img src="Project-III.png" alt="Project 2">
+                    <img src="assets/Project-III.png" alt="Project 2">
                 </div>
                 <div class="project-content">
                     <h3>CodeByte [ AI-Hackathon Final Prototype ]</h3>
