--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <span id="element"></span>
 
             <br>
-            <a href="assets/IsmailShaikh_InternshalaResume-3.pdf" download class="btn btn2">Resume</a>
+            <a href="assets/My-Resume-latest.pdf" download class="btn btn2">Resume</a>
         </div>
     </div>
     <!------------------------------------------------------------------------------------------------------------------------>
